[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ceflobhash"
version = "0.1.1"
description = "Root-Boolean Dual Node Inteligic — a verifiable dual-node consensus decision structure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["decision", "consensus", "verifiable", "dual-node"]

[project.urls]
Homepage = "https://github.com/your-org/root-boolean"
Source = "https://github.com/your-org/root-boolean"

[tool.setuptools.packages.find]
where = ["src"]
