[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ceflobhash"
version = "0.1.3"
description = "Root-Boolean Dual Node Inteligic — 可验证双节点共识判定 / verifiable dual-node consensus decision structure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["decision", "consensus", "verifiable", "dual-node", "binary", "CEF", "root-boolean"]

[project.urls]
Homepage = "https://github.com/openoe/ceflobhash"
Source = "https://github.com/openoe/ceflobhash"

[tool.setuptools.packages.find]
where = ["src"]
